--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -13,66 +13,69 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: reviewer
+        run: echo ${{ github.event.requested_team.name}}
+
+      - name: reviewer condition
         run: echo ${{ github.event.requested_team.name == 'Wallets'}}
 
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-          registry-url: https://registry.npmjs.org/
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-
-      - name: Cache node modules
-        uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        run: yarn install --immutable
-
-      - name: Check Single Package Version Policy
-        run: yarn syncpack:check
-
-      - name: Lint
-        run: yarn lint
-
-      - name: Build
-        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
-
-      - name: Typecheck
-        run: yarn typecheck
-
-      - name: Test
-        run: yarn test
-
-      # Figure out how to run this in parallel with the other tests
-      # This step takes 5 to 6 mins to run
-      - name: Checkout-widgets cypress tests
-        if: ${{ github.event.requested_team.name == 'Wallets'}}
-        run: yarn test:checkout:cypress
-
-      - name: Upload cypress videos artifacts
-        if: ${{ github.event.requested_team.name == 'Wallets'}}
-        uses: actions/upload-artifact@v2
-        with:
-          name: checkout-widgets-cypress-videos
-          path: ./packages/checkout/widgets-lib/cypress/videos
-
-      - name: Upload cypress screenshots artifacts
-        uses: actions/upload-artifact@v2
-        if: failure()
-        with:
-          name: checkout-widgets-cypress-screenshots
-          path: ./packages/checkout/widgets-lib/cypress/screenshots
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Use Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: lts/*
+#          registry-url: https://registry.npmjs.org/
+#
+#      - name: Get yarn cache directory path
+#        id: yarn-cache-dir-path
+#        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+#
+#      - name: Cache node modules
+#        uses: actions/cache@v3
+#        id: yarn-cache
+#        with:
+#          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+#          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+#          restore-keys: |
+#            ${{ runner.os }}-yarn-
+#
+#      - name: Install dependencies
+#        run: yarn install --immutable
+#
+#      - name: Check Single Package Version Policy
+#        run: yarn syncpack:check
+#
+#      - name: Lint
+#        run: yarn lint
+#
+#      - name: Build
+#        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
+#
+#      - name: Typecheck
+#        run: yarn typecheck
+#
+#      - name: Test
+#        run: yarn test
+#
+#      # Figure out how to run this in parallel with the other tests
+#      # This step takes 5 to 6 mins to run
+#      - name: Checkout-widgets cypress tests
+#        if: ${{ github.event.requested_team.name == 'Wallets'}}
+#        run: yarn test:checkout:cypress
+#
+#      - name: Upload cypress videos artifacts
+#        if: ${{ github.event.requested_team.name == 'Wallets'}}
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: checkout-widgets-cypress-videos
+#          path: ./packages/checkout/widgets-lib/cypress/videos
+#
+#      - name: Upload cypress screenshots artifacts
+#        uses: actions/upload-artifact@v2
+#        if: failure()
+#        with:
+#          name: checkout-widgets-cypress-screenshots
+#          path: ./packages/checkout/widgets-lib/cypress/screenshots
