--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: reviewer
         if: ${{ contains(github.event.pull_request.title, 'RUN-CY-TESTS') }}
-        run: echo ${{ contains(github.event.pull_request.title, 'RUN-CY-TESTS') }}
+        run: echo ${{ github.event.pull_request.title }}
 
       - name: Checkout
         uses: actions/checkout@v3
