--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest-8-cores
     steps:
       - name: Checkout
-        run: echo ${{ github.event.pull_request.requested_teams }}
+        run: echo ${{ github.event.pull_request.requested_teams[*] }}
 #      - name: Checkout
 #        uses: actions/checkout@v3
 #        with:
