--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -11,10 +11,13 @@ jobs:
     name: Build, Lint, Typecheck, Test
     runs-on: ubuntu-latest-8-cores
     steps:
-      - name: Checkout
-        run: |
-          teams=${{ join(github.event.pull_request.requested_teams.*.name, ', ') }}
-          echo ${{ contains(teams, 'Wallets') }}
+      - name: get reviewing teams
+        id: reviewer-team
+        run: echo "teams=${{ join(github.event.pull_request.requested_teams.*.name, ', ') }}" >> $TEAMS
+
+      - name: check teams
+        run: echo ${{ contains(steps.reviewer-team.outputs.teams, 'Wallets') }}
+
 #      - name: Checkout
 #        uses: actions/checkout@v3
 #        with:
