--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -9,6 +9,7 @@
     "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0",
     "assert": "^2.0.0",
+    "axios": "^1.3.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
