Include StatusView.cy.tsx

--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -51,7 +51,7 @@ jobs:
       - name: Test
         run: yarn test
 
-      - name: get reviewing teams
+      - name: Get reviewing teams
         id: reviewer-teams
         run: echo "teams=${{ join(github.event.pull_request.requested_teams.*.name, ', ') }}" >> $GITHUB_OUTPUT
 
