[Wt 1521] Run cypress tests in pipeline for wallets team (no-changelog) (#636)

--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -50,3 +50,25 @@ jobs:
 
       - name: Test
         run: yarn test
+
+      - name: Get reviewing teams
+        id: reviewer-teams
+        run: echo "teams=${{ join(github.event.pull_request.requested_teams.*.name, ', ') }}" >> $GITHUB_OUTPUT
+
+      - name: Checkout-widgets cypress tests
+        if: ${{ contains(steps.reviewer-teams.outputs.teams, 'Wallets') && !contains(github.event.pull_request.title, 'SKIP-CY') }}
+        run: yarn test:checkout:cypress
+
+      - name: Upload cypress videos artifacts
+        if: ${{ contains(steps.reviewer-teams.outputs.teams, 'Wallets') && !contains(github.event.pull_request.title, 'SKIP-CY') }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: checkout-widgets-cypress-videos
+          path: ./packages/checkout/widgets-lib/cypress/videos
+
+      - name: Upload cypress screenshots artifacts
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: checkout-widgets-cypress-screenshots
+          path: ./packages/checkout/widgets-lib/cypress/screenshots
